[@mantine/core] Divider: Fix poor color contrast with light color scheme

--- a/packages/@mantine/core/src/components/Divider/Divider.module.css
+++ b/packages/@mantine/core/src/components/Divider/Divider.module.css
@@ -33,7 +33,7 @@
   display: flex;
   align-items: center;
   font-size: var(--mantine-font-size-xs);
-  color: var(--divider-color, var(--mantine-color-dimmed));
+  color: var(--mantine-color-dimmed);
   white-space: nowrap;
 
   &:where([data-position='left'])::before {
